Aun con el script

--- a/Fullstack/act_final_e1/style.css
+++ b/Fullstack/act_final_e1/style.css
@@ -131,3 +131,10 @@ footer {
 body {
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
+
+.error {
+    color: red;
+    font-size: 12px;
+    margin-top: -10px;
+    margin-bottom: 10px;
+}
